--- a/styling2.css
+++ b/styling2.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'Helvetica Neue,' Helvetica, Arial, serif;
+	font-family: 'Helvetica Neue';
 	font-size: small;
 	color: grey;
 }
